feat: added logout functionallity
