# src/routes/userRoutes.js
@@ -7,6 +7,6 @@ router.post('/register', register);
 
 router.post('/login', login);
 
-router.get('/logout', logout);
+router.post('/logout', logout);
 
 export default router;
